<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.digi.digiteacher.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_add_books"
        android:name="com.digi.digiteacher.AddBooksFragment"
        android:label="@string/nav_add_books"
        tools:layout="@layout/fragment_add_books" />

    <fragment
        android:id="@+id/nav_my_account"
        android:name="com.digi.digiteacher.MyAccountFragment"
        android:label="@string/nav_my_account"
        tools:layout="@layout/fragment_my_account" />

</navigation>