<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="@dimen/_42sdp"
        android:layout_height="@dimen/_42sdp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:src="@drawable/back_ic" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/_180sdp"
        android:layout_height="@dimen/_80sdp"
        android:layout_below="@id/backBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_44sdp"
        android:layout_marginBottom="@dimen/_22sdp"
        android:padding="@dimen/_8sdp"
        android:src="@drawable/splash_src" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/logo"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@drawable/main_back"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_522sdp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_14sdp"
                android:layout_marginEnd="@dimen/_14sdp"
                android:background="#00000000"
                android:hint="@string/name"
                android:padding="@dimen/_4sdp"
                app:boxBackgroundColor="@null">

                <EditText
                    android:id="@+id/nameEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/name"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginEnd="@dimen/_14sdp"
                android:background="#00000000"
                android:hint="@string/mobile"
                android:padding="@dimen/_4sdp"
                app:boxBackgroundColor="@null">

                <EditText
                    android:id="@+id/mobileEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:inputType="phone" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/mobile"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginEnd="@dimen/_14sdp"
                android:background="#00000000"
                android:hint="@string/email"
                android:padding="@dimen/_4sdp"
                app:boxBackgroundColor="@null">

                <EditText
                    android:id="@+id/emailEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/school"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/email"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginEnd="@dimen/_14sdp"
                android:background="#00000000"
                android:hint="@string/school"
                android:padding="@dimen/_4sdp"
                app:boxBackgroundColor="@null">

                <EditText
                    android:id="@+id/schoolEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/clas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/school"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginEnd="@dimen/_14sdp"
                android:background="#00000000"
                android:hint="@string/clas"
                android:padding="@dimen/_4sdp"
                app:boxBackgroundColor="@null">

                <EditText
                    android:id="@+id/clasEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/clas"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginEnd="@dimen/_14sdp"
                android:background="#00000000"
                android:hint="@string/code"
                android:padding="@dimen/_4sdp"
                app:boxBackgroundColor="@null">

                <EditText
                    android:id="@+id/codeEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/code"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginEnd="@dimen/_14sdp"
                android:background="#00000000"
                android:hint="@string/password"
                android:padding="@dimen/_4sdp"
                app:boxBackgroundColor="@null"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/passwordEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/password"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginEnd="@dimen/_14sdp"
                android:background="#00000000"
                android:hint="@string/confirmPassword"
                android:padding="@dimen/_4sdp"
                app:boxBackgroundColor="@null"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/cPasswordEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signUpBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cPassword"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/_48sdp"
                android:layout_marginTop="@dimen/_18sdp"
                android:layout_marginEnd="@dimen/_48sdp"
                android:background="@drawable/login_register_signup_btn"
                android:elevation="@dimen/_4sdp"
                android:fontFamily="@font/montserrat_bold"
                android:padding="@dimen/_8sdp"
                android:stateListAnimator="@null"
                android:text="@string/signUp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp"
                app:backgroundTint="@null"
                app:icon="@drawable/signup_ic"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/_22sdp"
                app:iconSize="@dimen/_18sdp"
                app:iconTint="@color/white" />

            <RelativeLayout
                android:id="@+id/haveAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/signUpBtn"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_marginBottom="@dimen/_4sdp">

                <TextView
                    android:id="@+id/haveAccountTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/haveAccount"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:id="@+id/haveAccountBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_2sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:layout_toEndOf="@id/haveAccountTv"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/signIn"
                    android:textColor="@color/signIn"
                    android:textSize="@dimen/_12ssp" />

            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>