<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="@dimen/_42sdp"
        android:layout_height="@dimen/_42sdp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:src="@drawable/back_ic" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/_240sdp"
        android:layout_below="@id/backBtn"
        android:layout_height="@dimen/_100sdp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_28sdp"
        android:layout_marginBottom="@dimen/_28sdp"
        android:padding="@dimen/_8sdp"
        android:src="@drawable/splash_src" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_400sdp"
        android:layout_below="@id/logo"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@drawable/main_back"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_400sdp"
            android:background="@drawable/main_back">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_14sdp"
                android:layout_marginEnd="@dimen/_14sdp"
                android:background="#00000000"
                android:hint="@string/email"
                android:padding="@dimen/_4sdp"
                app:boxBackgroundColor="@null">

                <EditText
                    android:id="@+id/emailEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/email"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_18sdp"
                android:layout_marginEnd="@dimen/_14sdp"
                android:background="#00000000"
                android:hint="@string/password"
                android:padding="@dimen/_4sdp"
                app:boxBackgroundColor="@null"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/passwordEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signInBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/password"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/_48sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:layout_marginEnd="@dimen/_48sdp"
                android:background="@drawable/login_register_signin_btn"
                android:elevation="@dimen/_4sdp"
                android:fontFamily="@font/montserrat_bold"
                android:padding="@dimen/_8sdp"
                android:stateListAnimator="@null"
                android:text="@string/signIn"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp"
                app:backgroundTint="@null"
                app:icon="@drawable/signin_ic"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/_22sdp"
                app:iconSize="@dimen/_18sdp"
                app:iconTint="@color/white" />

            <RelativeLayout
                android:id="@+id/noAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/signInBtn"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_18sdp"
                android:layout_marginEnd="@dimen/_12sdp">

                <TextView
                    android:id="@+id/noAccountTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/noAccount"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:id="@+id/noAccountBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_2sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:layout_toEndOf="@id/noAccountTv"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/signUp"
                    android:textColor="@color/signUp"
                    android:textSize="@dimen/_12ssp" />

            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>