<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:background="@drawable/home_background"
    android:layout_height="match_parent"
    tools:context=".ResetPasswordActivity">

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="@dimen/_42sdp"
        android:layout_height="@dimen/_42sdp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:src="@drawable/back_ic" />

    <TextView
        android:id="@+id/fullNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_below="@id/backBtn"
        android:fontFamily="@font/montserrat_semi_bold"
        android:textSize="@dimen/_28ssp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="FullName"/>

    <TextView
        android:id="@+id/emailLabel"
        android:layout_width="wrap_content"
        android:layout_below="@id/fullNameLabel"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat_semi_bold"
        android:textSize="@dimen/_20ssp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="Email address"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_400sdp"
        android:layout_below="@+id/backBtn"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_120sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_400sdp"
            android:background="@drawable/main_back">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_14sdp"
                android:layout_marginEnd="@dimen/_14sdp"
                android:background="#00000000"
                android:hint="@string/email"
                android:padding="@dimen/_4sdp"
                app:boxBackgroundColor="@null">

                <EditText
                    android:id="@+id/emailEt"
                    android:layout_width="match_parent"
                    android:editable="false"
                    android:focusable="false"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/email"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_14sdp"
                android:background="#00000000"
                android:hint="@string/password"
                android:padding="@dimen/_4sdp"
                app:boxBackgroundColor="@null"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/passwordEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/password"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_14sdp"
                android:background="#00000000"
                android:hint="@string/confirmPassword"
                android:padding="@dimen/_4sdp"
                app:boxBackgroundColor="@null"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/cPasswordEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/resetPasswordBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cPassword"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/_48sdp"
                android:layout_marginTop="@dimen/_22sdp"
                android:layout_marginEnd="@dimen/_48sdp"
                android:background="@drawable/login_register_signin_btn"
                android:elevation="@dimen/_4sdp"
                android:fontFamily="@font/montserrat_bold"
                android:padding="@dimen/_8sdp"
                android:stateListAnimator="@null"
                android:text="@string/resetPassword"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp"
                app:backgroundTint="@null" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>